--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -397,27 +397,27 @@
     border: 3px solid #7e0404; 
 }
 .fortyk .list3col{
-
+    grid-gap: 0px;
     grid-template-columns: auto 30px 30px;
 }
 .fortyk .list4col2{
-
+    grid-gap: 0px;
     grid-template-columns: auto 2em 1em 1em;
 }
 .fortyk .list4col{
-
+    grid-gap: 0px;
     grid-template-columns: auto auto 30px 30px;
 }
 .fortyk .list5col{
-
+    grid-gap: 0px;
     grid-template-columns: 50% auto auto 30px 30px;
 }
 .fortyk .list6col{
-
+    grid-gap: 0px;
     grid-template-columns: 50% auto auto auto 30px 30px;
 }
 .fortyk .list7col{
-
+    grid-gap: 0px;
     grid-template-columns: 40% auto auto auto auto 30px 30px;
 }
 .fortyk .list-item{
@@ -950,5 +950,48 @@
 }
 .right-mechbay{
    flex:3; 
+     background: url(../icons/impknightoutline.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position-y: center;
+    background-position-x: center;
+}
+.mechgrid{
+    display:grid;
+    grid-template-columns: 40% auto 25%;
+    grid-template-rows: 15% auto 50%;
+}
+.info1{
+    grid-column:1;
+    grid-row:1;
+}
+.info2{
+    grid-column:3;
+    grid-row:1;
+}
+.info3{
+    grid-column:1;
+    grid-row:3;
+}
+.info4{
+    grid-column:3;
+    grid-row:3;
+}
+.missile-weapon{
+    grid-column:2;
+    grid-row:1;
+}
+.left-weapon{
+    grid-column:1;
+    grid-row:2;
+}
+.right-weapon{
+    grid-column:3;
+    grid-row:2;
+}
+.center{
+    grid-column:2;
+    grid-row:2 / span 2;    
+
 }
 [hidden] { display: none !important; }
