--- a/templates/actor/knightParts/mech-bay.html
+++ b/templates/actor/knightParts/mech-bay.html
@@ -194,9 +194,51 @@
                         <span class="list-item-header">A</span>
                         <span class="list-item-header">T</span>
                         <span class="list-item-header">S</span>
-                        <a class="mechbay-grid-section list-item-header4" name="components">Components</a>
-                        {{#each components}}
-                        <span class="list-item mechbay-component" data-id="{{this.id}}" name="component-slot">{{this.name}}</span>
+                        <a class="mechbay-grid-section list-item-header4" name="sensors">Sensors</a>
+                        {{#each sensors}}
+                        <span class="list-item mechbay-component" data-id="{{this.id}}" name="sensor-slot">{{this.name}}</span>
+                        <span class="list-item " name="components">{{this.data.data.amount.left}}</span>
+                        <span class="list-item " name="components">{{this.data.data.weight.value}}</span>
+                        <span class="list-item " name="components">{{this.data.data.space.value}}</span>
+                        {{/each}}
+                        <a class="mechbay-grid-section list-item-header4" name="platings">Platings</a>
+                        {{#each platings}}
+                        <span class="list-item mechbay-component" data-id="{{this.id}}" name="plating-slot">{{this.name}}</span>
+                        <span class="list-item " name="components">{{this.data.data.amount.left}}</span>
+                        <span class="list-item " name="components">{{this.data.data.weight.value}}</span>
+                        <span class="list-item " name="components">{{this.data.data.space.value}}</span>
+                        {{/each}}
+                        <a class="mechbay-grid-section list-item-header4" name="coremods">Core Mods</a>
+                        {{#each coreMods}}
+                        <span class="list-item mechbay-component" data-id="{{this.id}}" name="core-mod-slot">{{this.name}}</span>
+                        <span class="list-item " name="components">{{this.data.data.amount.left}}</span>
+                        <span class="list-item " name="components">{{this.data.data.weight.value}}</span>
+                        <span class="list-item " name="components">{{this.data.data.space.value}}</span>
+                        {{/each}}
+                        <a class="mechbay-grid-section list-item-header4" name="thronemods">Throne Mods</a>
+                        {{#each throneMods}}
+                        <span class="list-item mechbay-component" data-id="{{this.id}}" name="throne-mod-slot">{{this.name}}</span>
+                        <span class="list-item " name="components">{{this.data.data.amount.left}}</span>
+                        <span class="list-item " name="components">{{this.data.data.weight.value}}</span>
+                        <span class="list-item " name="components">{{this.data.data.space.value}}</span>
+                        {{/each}}
+                        <a class="mechbay-grid-section list-item-header4" name="sensors">Arm Actuators</a>
+                        {{#each armActuators}}
+                        <span class="list-item mechbay-component" data-id="{{this.id}}" name="arm-actuator-slot">{{this.name}}</span>
+                        <span class="list-item " name="components">{{this.data.data.amount.left}}</span>
+                        <span class="list-item " name="components">{{this.data.data.weight.value}}</span>
+                        <span class="list-item " name="components">{{this.data.data.space.value}}</span>
+                        {{/each}}
+                        <a class="mechbay-grid-section list-item-header4" name="legActuators">Leg Actuators</a>
+                        {{#each legActuators}}
+                        <span class="list-item mechbay-component" data-id="{{this.id}}" name="leg-actuator-slot">{{this.name}}</span>
+                        <span class="list-item " name="components">{{this.data.data.amount.left}}</span>
+                        <span class="list-item " name="components">{{this.data.data.weight.value}}</span>
+                        <span class="list-item " name="components">{{this.data.data.space.value}}</span>
+                        {{/each}}
+                        <a class="mechbay-grid-section list-item-header4" name="others">Other Components</a>
+                        {{#each others}}
+                        <span class="list-item mechbay-component" data-id="{{this.id}}" name="other-slot">{{this.name}}</span>
                         <span class="list-item " name="components">{{this.data.data.amount.left}}</span>
                         <span class="list-item " name="components">{{this.data.data.weight.value}}</span>
                         <span class="list-item " name="components">{{this.data.data.space.value}}</span>
@@ -266,7 +308,7 @@
                 <div class="flexrow">
                     <span>Stuctural integrity: </span> <input type="text" class="combat-resources" data-target="data.secChar.wounds.value" value="{{data.secChar.wounds.value}}" data-dtype="Number"/>/{{data.secChar.wounds.max}}
                 </div>
-                <span>Armor: {{data.knight.armor.value}}/{{data.knight.armor.max}}</span>
+                <span>Armor: {{data.knight.armorValues.value}}/{{data.knight.armorValues.max}}</span>
 
             </div>
             <div class="carapace mechgrid-child flex-group-center">
@@ -331,13 +373,46 @@
                 {{/each}}
             </div>
             <div class="torso mechgrid-child flexcol flex-group-center">
+                {{#if data.knight.core}}
+
+                <div class="core">
+                    <span>{{data.knight.core.name}}</span>
+                    <a class="list-button delete-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.core"></a>
+                </div>
+                {{else}}
+                <div class="core-slot component-slot" data-index="{{@index}}" data-path="data.knight.core">
+                    Core Slot
+                </div>
+                {{/if}}
+                {{#if data.knight.structure}}
+
+                <div class="structure">
+                    <span>{{data.knight.structure.name}}</span>
+                    <a class="list-button delete-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.structure"></a>
+                </div>
+                {{else}}
+                <div class="structure-slot component-slot" data-index="{{@index}}" data-path="data.knight.structure">
+                    Structure Slot
+                </div>
+                {{/if}}
+                {{#if data.knight.armor}}
+
+                <div class="armor">
+                    <span>{{data.knight.armor.name}}</span>
+                    <a class="list-button delete-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.armor" ></a>
+                </div>
+                {{else}}
+                <div class="armor-slot component-slot" data-index="{{@index}}" data-path="data.knight.armor">
+                    Armor Slot
+                </div>
+                {{/if}}
                 
                 {{#each torsoHardPoints.auxiliary}}
                 {{#if this}}
 
                 <div class="auxiliary-weapon">
                     <span>{{this.name}}</span>
-                    <a class="list-button delete-weapon" title="Delete" data-item-id="{{this.id}}" data-path="data.hardPoints.torso.auxiliary" data-index="{{@index}}"></a>
+                    <a class="list-button delete-weapon" title="Delete" data-item-id="{{this.id}}" data-path="data.hardPoints.torso.auxiliary"  data-index="{{@index}}"></a>
                 </div>
                 {{else}}
                 <div class="auxiliary-slot component-slot" data-index="{{@index}}" data-path="data.hardPoints.torso.auxiliary">
@@ -345,22 +420,85 @@
                 </div>
                 {{/if}}
                 {{/each}}
-                <span>Throne Mod</span>
-                <span>Core</span>
-                <span>Armor</span>
-                <span>Structure</span>
-                <span>Sensor</span>
-                <span>Plating</span>
-                <span>Core Mod</span>
-                <span>Arm Actuator</span>
-                <span>Leg Actuator</span>
-                <span>Other Components</span>
-                <span>Other Components</span>
-                <span>Other Components</span>
-                <span>Other Components</span>
-                <span>Other Components</span>
-                <span>Other Components</span>
-                <span>Other Components</span>
+                {{#if data.knight.throneMod}}
+
+                <div class="throne-mod">
+                    <span>{{data.knight.throneMod.name}}</span>
+                    <a class="list-button delete-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.throneMod" ></a>
+                </div>
+                {{else}}
+                <div class="throne-mod-slot component-slot" data-index="{{@index}}" data-path="data.knight.throneMod">
+                    Throne Mod Slot
+                </div>
+                {{/if}}
+                {{#if data.knight.sensor}}
+
+                <div class="sensor">
+                    <span>{{data.knight.sensor.name}}</span>
+                    <a class="list-button delete-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.sensor" ></a>
+                </div>
+                {{else}}
+                <div class="sensor-slot component-slot" data-index="{{@index}}" data-path="data.knight.sensor">
+                    Sensor Slot
+                </div>
+                {{/if}}
+                {{#if data.knight.plating}}
+
+                <div class="plating">
+                    <span>{{data.knight.plating.name}}</span>
+                    <a class="list-button delete-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.plating" ></a>
+                </div>
+                {{else}}
+                <div class="plating-slot component-slot" data-index="{{@index}}" data-path="data.knight.plating">
+                    Plating Slot
+                </div>
+                {{/if}}
+                {{#if data.knight.coreMod}}
+
+                <div class="core-mod">
+                    <span>{{data.knight.coreMod.name}}</span>
+                    <a class="list-button delete-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.coreMod" ></a>
+                </div>
+                {{else}}
+                <div class="core-mod-slot component-slot" data-index="{{@index}}" data-path="data.knight.coreMod">
+                    Sensor Slot
+                </div>
+                {{/if}}
+               {{#if data.knight.armActuator}}
+
+                <div class="arm-actuator">
+                    <span>{{data.knight.armActuator.name}}</span>
+                    <a class="list-button delete-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.armActuator" ></a>
+                </div>
+                {{else}}
+                <div class="arm-actuator-slot component-slot" data-index="{{@index}}" data-path="data.knight.armActuator">
+                    Arm Actuator Slot
+                </div>
+                {{/if}}
+                {{#if data.knight.legActuator}}
+
+                <div class="leg-actuator">
+                    <span>{{data.knight.legActuator.name}}</span>
+                    <a class="list-button delete-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.legActuator" ></a>
+                </div>
+                {{else}}
+                <div class="leg-actuator-slot component-slot" data-index="{{@index}}" data-path="data.knight.legActuator">
+                    Leg Actuator Slot
+                </div>
+                {{/if}}
+                {{#each data.knight.components}}
+                {{#if this}}
+
+                <div class="other-component">
+                    <span>{{this.name}}</span>
+                    <a class="list-button delete-other-component" title="Delete" data-item-id="{{this.id}}" data-path="data.knight.components" data-index="{{@index}}"></a>
+                </div>
+                {{else}}
+                <div class="other-slot component-slot" data-index="{{@index}}" data-path="data.knight.components">
+                    Component Slot
+                </div>
+                {{/if}}
+                {{/each}}
             </div>
             <div class="right-weapon mechgrid-child flex-group-center">
                {{#each rightArmHardPoints.titanicRanged}}
