--- a/templates/item/item-knightComponent-sheet.html
+++ b/templates/item/item-knightComponent-sheet.html
@@ -12,13 +12,13 @@
         <label>Type:</label>
         <select class="power-type" name="data.type.value">
             {{#select data.type.value}}
-            <option value="Other">Other</option>
-            <option value="Throne Mod">Throne Mod</option>  
-            <option value="Core Mod">Core Mod</option>
-            <option value="Plating">Plating</option> 
-            <option value="Sensor">Sensor</option>
-            <option value="Arm Actuator">Arm Actuator</option> 
-            <option value="Leg Actuator">Leg Actuator</option>
+            <option value="other">Other</option>
+            <option value="throne-mod">Throne Mod</option>  
+            <option value="core-mod">Core Mod</option>
+            <option value="plating">Plating</option> 
+            <option value="sensor">Sensor</option>
+            <option value="arm-actuator">Arm Actuator</option> 
+            <option value="leg-actuator">Leg Actuator</option>
             
 
 
